--- a/nbs/23_1_6_unet噪音去除.ipynb
+++ b/nbs/23_1_6_unet噪音去除.ipynb
@@ -36,6 +36,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a18761d5-0eb6-4a63-8d18-d568e9abe5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooks are installed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| hide\n",
+    "!nbdev_install_hooks"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "de56e72e-318e-4f8d-a946-2471e0b0de1b",
    "metadata": {},
