--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# core\n",
     "\n",
-    "> Fill in a module description here"
+    "> 理论上这里需要放点东西  \n",
+    "> 但是我没有"
    ]
   },
   {
@@ -54,6 +55,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
