--- a/nbs/22_12_23_torch.nn.ipynb
+++ b/nbs/22_12_23_torch.nn.ipynb
@@ -35,6 +35,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85040402-0d98-4b36-87d1-f2bb2c7346bd",
+   "metadata": {},
+   "source": [
+    "# torch.nn note"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3f311fc2-f068-470f-a004-94fff8e56246",
    "metadata": {},
    "source": [
