--- a/nbs/23_01_06_unet噪音去除.ipynb
+++ b/nbs/23_01_06_unet噪音去除.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "64dceb6c-2078-4c49-85fa-476836be7321",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from fastai.vision.all import *\n",
@@ -17,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1a19ab55-05a5-4005-a8e9-7733ae581375",
    "metadata": {},
    "outputs": [],
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "504f2991-5a9f-4c06-adb4-1d39c815b81e",
    "metadata": {},
    "outputs": [],
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": null,
    "id": "a18761d5-0eb6-4a63-8d18-d568e9abe5fb",
    "metadata": {},
    "outputs": [
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b263a5e5-4a54-4d43-bfb4-74db0226a542",
    "metadata": {},
    "outputs": [],
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "69e9755c-2feb-42d0-a820-1621d9a467ae",
    "metadata": {},
    "outputs": [
@@ -116,7 +114,7 @@
        "'/ailearn/own/daily/dataset/dataset/voice_dataset/cv-corpus-11.0-delta-2022-09-21/en/clips/common_voice_en_34451548.mp3'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d031c9bf-afb5-4ff0-9f99-1e778e65e33b",
    "metadata": {},
    "outputs": [],
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "841ab3c3-116b-49b8-89aa-00c75fbcb1d0",
    "metadata": {},
    "outputs": [
@@ -168,10 +166,10 @@
        "                  "
       ],
       "text/plain": [
-       "<pydub.audio_segment.AudioSegment at 0x7f6d904215e0>"
+       "<pydub.audio_segment.AudioSegment>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "990df9b2-1ec4-478f-a6b3-b66b8bf5c8ac",
    "metadata": {},
    "outputs": [],
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dcbb306a-4e5e-4a2d-b6a8-13a9ddebaf05",
    "metadata": {},
    "outputs": [
@@ -230,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c17c251f-812f-469c-be96-b7daa4fe428c",
    "metadata": {},
    "outputs": [
@@ -240,7 +238,7 @@
        "32000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d557de53-308e-4b18-838f-21b600cb53b0",
    "metadata": {},
    "outputs": [],
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "40b949b4-8341-4a2f-bd97-bbf8b8940967",
    "metadata": {},
    "outputs": [],
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "15d76ee8-b162-4b67-a584-7a78b6023dcd",
    "metadata": {},
    "outputs": [],
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6b581d54-ad8f-4dd1-b82c-d15cfbdadc91",
    "metadata": {},
    "outputs": [
@@ -335,7 +333,7 @@
        "(#2000) ['/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/4-195707-A-13.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/3-187710-A-11.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/4-204777-C-39.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/2-135649-A-45.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/1-90797-A-15.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/4-181955-A-3.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/1-22694-A-20.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/4-119648-D-48.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/1-56380-B-5.wav','/ailearn/own/daily/dataset/dataset/voice_dataset/ESC-50-master/audio/2-83536-A-27.wav'...]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d96352bc-b6d7-4b3f-a2dc-f48103d0f142",
    "metadata": {},
    "outputs": [],
@@ -398,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a5cff040-fb6f-4eac-9416-14a373f78084",
    "metadata": {},
    "outputs": [],
@@ -425,16 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c1069499-12a3-4818-bf0e-2d5df1892974",
    "metadata": {},
    "outputs": [],
    "source": [
     "def playarr(arr,rate=32000):\n",
-    "    \n",
     "    arr = array(arr)\n",
     "    arr = arr.astype(np.int16)\n",
-    "    \n",
     "    exportwav('temp/test.wav',rate,arr)\n",
     "    return AudioSegment.from_wav('temp/test.wav')"
    ]
@@ -481,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f088af5e-7a19-4f5a-b3f8-2131edfc0487",
    "metadata": {},
    "outputs": [],
@@ -523,11 +519,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "abed44c7-a78f-4bcc-8857-eb09ed04c452",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = getrandsum(1, voiceset,voiceset2)"
@@ -535,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d6edc372-e362-43de-b30f-9a037c6a8b04",
    "metadata": {},
    "outputs": [
@@ -545,7 +539,7 @@
        "torch.Size([256, 1344, 2])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ec94508f-84a9-42c0-8645-de5f39cdff91",
    "metadata": {},
    "outputs": [],
@@ -590,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "977262ad-7518-4937-8165-bdd2dadce8a7",
    "metadata": {},
    "outputs": [],
@@ -612,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "df3c1767-9a2c-4f60-9076-8f2cd7ca89c7",
    "metadata": {},
    "outputs": [],
@@ -622,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ab7b827a-cd7e-4396-a4ff-9e44e1ac48de",
    "metadata": {},
    "outputs": [],
@@ -632,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "daf51a50-09fd-4573-8447-e5572e83d380",
    "metadata": {},
    "outputs": [
@@ -647,10 +641,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6bbb90f820>]"
+       "[<matplotlib.lines.Line2D>]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,17 +665,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ca8008f6-2247-40b7-bb8f-8b70d576ebae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6bbb79a730>]"
+       "[<matplotlib.lines.Line2D>]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -702,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "558a828c-0549-4806-8615-d345135e79d1",
    "metadata": {},
    "outputs": [
@@ -712,7 +706,7 @@
        "torch.Size([256, 1344, 2])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2bc2331b-765e-470d-9f08-b85a5acb85b5",
    "metadata": {},
    "outputs": [],
@@ -784,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1546b785-e129-4e75-9838-00f6474e97ff",
    "metadata": {},
    "outputs": [],
@@ -804,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": null,
    "id": "71d60531-dcc1-4182-a8a6-a0c15bcbba42",
    "metadata": {},
    "outputs": [],
@@ -892,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": null,
    "id": "8ba5e6ee-d5ef-43eb-aa46-a1c71d3ec5bd",
    "metadata": {},
    "outputs": [
@@ -921,11 +915,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": null,
    "id": "048b19af-4863-43c8-8e23-2028736f4bea",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dls = dl.dataloaders(128,bs=4)"
@@ -933,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": null,
    "id": "e08ab081-95ee-4ba4-bed9-128a1cf5fc39",
    "metadata": {},
    "outputs": [],
@@ -945,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": null,
    "id": "fef6d93b-6e65-48a4-a0a2-adbdd448ca7f",
    "metadata": {},
    "outputs": [],
@@ -955,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "id": "2de35ce6-c931-4b8c-aa87-968ff40dc26a",
    "metadata": {},
    "outputs": [
@@ -1002,7 +994,7 @@
        "SuggestedLRs(valley=6.30957365501672e-05)"
       ]
      },
-     "execution_count": 330,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1023,11 +1015,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": null,
    "id": "ac231751-623b-4052-9831-b7d6938de8e7",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1162,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": null,
    "id": "65a2811c-e905-415e-b511-2801842b2052",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": null,
    "id": "15c2944b-1a3c-4e2d-aa3e-344fd2a90d74",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": null,
    "id": "23082886-9309-4b66-8656-5f06ecb2d9ff",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1188,7 @@
        "torch.Size([1, 256, 1344, 2])"
       ]
      },
-     "execution_count": 362,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,17 +1199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": null,
    "id": "df6d5f47-381d-45d2-a55d-59a268da34fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6b311ac640>"
+       "<matplotlib.image.AxesImage>"
       ]
      },
-     "execution_count": 363,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1255,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": null,
    "id": "a148397c-2b40-43fa-8022-d2613787b02e",
    "metadata": {},
    "outputs": [
@@ -1270,10 +1260,10 @@
        "                  "
       ],
       "text/plain": [
-       "<pydub.audio_segment.AudioSegment at 0x7f6b31133220>"
+       "<pydub.audio_segment.AudioSegment>"
       ]
      },
-     "execution_count": 364,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": null,
    "id": "7cfc45cb-b644-4fa5-9d53-2984ffb7d799",
    "metadata": {},
    "outputs": [
@@ -1299,10 +1289,10 @@
        "                  "
       ],
       "text/plain": [
-       "<pydub.audio_segment.AudioSegment at 0x7f68499e08b0>"
+       "<pydub.audio_segment.AudioSegment>"
       ]
      },
-     "execution_count": 365,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": null,
    "id": "ee9e56af-614d-4a45-8458-507b582775d7",
    "metadata": {},
    "outputs": [
@@ -1328,10 +1318,10 @@
        "                  "
       ],
       "text/plain": [
-       "<pydub.audio_segment.AudioSegment at 0x7f6842a97040>"
+       "<pydub.audio_segment.AudioSegment>"
       ]
      },
-     "execution_count": 366,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": null,
    "id": "f6ba8b10-0c1c-4389-ac8f-302ad40f9648",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1358,7 @@
        "Path('models/unet_voice.pth')"
       ]
      },
-     "execution_count": 367,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,17 +1369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": null,
    "id": "756c9d78-1232-4ee6-9340-d8a3ee80f137",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<fastai.learner.Learner at 0x7f6b31e24550>"
+       "<fastai.learner.Learner>"
       ]
      },
-     "execution_count": 368,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,13 +1390,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": null,
    "id": "6f674736-3154-4941-a471-86f4d2e6470c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'models/*': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
-    "!rm -rf models/"
+    "!rm -r models/*"
    ]
   }
  ],
@@ -1416,17 +1414,12 @@
    "language": "python",
    "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
