--- a/nbs/23_03_08_wcpdtoolbox.ipynb
+++ b/nbs/23_03_08_wcpdtoolbox.ipynb
@@ -2,50 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a007d41b-4b8e-45a6-8b20-7bb3e75c1c44",
    "metadata": {},
    "source": [
-    "# Doucx's blog"
+    "# 23_03_08"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "81201299-6a9c-4ccc-8e2b-fa944aac94db",
    "metadata": {},
    "source": [
-    "这是[Doucx的博客](https://doucx.github.io/blog/)"
+    "## WcpDToolBox"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "44cce93e-62a0-434a-b0b1-f48e806f905d",
    "metadata": {},
    "source": [
-    "对每日的记录,相当于笔记"
+    "制作了一组工具包,为了美好的生活"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "012b376e-1f5c-4966-829a-5d1122b958e1",
    "metadata": {},
    "source": [
-    "## 其它:"
+    "## Vim"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3e30efd9-24eb-4c69-981c-f547fc05facf",
    "metadata": {},
    "source": [
-    "### WcpdToolBox\n",
-    "自己用的方便工具"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "见[WcpDToolBox](https://github.com/doucx/wcpdtoolbox)"
+    "使用`Vim-Plug`安装了一些插件,vim变得更好看了"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33ef5949-387e-4ca0-8e94-357e0f671d6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -66,5 +64,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
