语音识别模型

--- a/nbs/blog/.basic_notebook.ipynb
+++ b/nbs/blog/.basic_notebook.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "297f253b-4087-40c9-9b5d-15b9d545ecee",
+   "cell_type": "raw",
+   "id": "5495bc06-f5ec-4183-b85e-b1e864bce582",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "author: [Doucx]\n",
+    "date: 2022-12-23\n",
+    "description:\n",
+    "tags: []\n",
+    "title: ''\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
