--- a/nbs/blog/posts/22_12_23_torch.nn/22_12_23_torch.nn.ipynb
+++ b/nbs/blog/posts/22_12_23_torch.nn/22_12_23_torch.nn.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "5e94231d-fb46-4ded-a272-1da2b756f2d2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "author: [Doucx]\n",
+    "date: 2022-12-23\n",
+    "description: torch.nn 模块\n",
+    "tags: [Torch]\n",
+    "title: 'torch.nn'\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "52ed9320-2883-44b5-b0a3-b4fafc576419",
