--- a/nbs/blog/posts/23_01_06_unet噪音去除/23_01_06_unet噪音去除.ipynb
+++ b/nbs/blog/posts/23_01_06_unet噪音去除/23_01_06_unet噪音去除.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "c9012835-629a-4097-92a8-7a062b5a0da2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "author: [Doucx]\n",
+    "date: 2023-01-06\n",
+    "description: 尝试制作一个增强人声的模型-On Unet\n",
+    "tags: [Torch, Model]\n",
+    "title: '人声增强'\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "64dceb6c-2078-4c49-85fa-476836be7321",
