--- a/nbs/blog/posts/23_03_08_wcpdtoolbox/23_03_08_wcpdtoolbox.ipynb
+++ b/nbs/blog/posts/23_03_08_wcpdtoolbox/23_03_08_wcpdtoolbox.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "b942c76b-1861-45c7-a814-cc99be6d4ff1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "author: [Doucx]\n",
+    "date: 2023-03-08\n",
+    "description: None\n",
+    "tags: [Other]\n",
+    "title: 'WcpDToolBox'\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a007d41b-4b8e-45a6-8b20-7bb3e75c1c44",
    "metadata": {},
