--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这是[Doucx的博客](https://doucx.github.io/blog/)"
+    "这是[Doucx的博客](https://doucx.github.io/blog/blog)"
    ]
   },
   {
