语音识别模型

--- a/nbs/blog/.basic_notebook.ipynb
+++ b/nbs/blog/.basic_notebook.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "---\n",
     "author: [Doucx]\n",
-    "date: 2022-12-23\n",
-    "description:\n",
-    "tags: []\n",
-    "title: ''\n",
+    "date: 2023-01-01\n",
+    "description: DES\n",
+    "tags: [TAGS]\n",
+    "title: TITLE''\n",
     "---"
    ]
   }
